--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4j
------------
* Fixed a whole lot of bugs in Kiai
* Fixed a bug that would lock out strapon action for Kiai
* Run is no longer 100% certain. It's based on your level and the level of the encounter (ie the first mob). Debug is always 100%

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4i
------------
* Fixed a bunch of bugs and typos.
* Added new effects to a bunch of TF items. Among other things:
 - Adjusting femininity
 - Adjusting muscle tone (not widely used atm)
 - Adjusting hip size
 - More stat adjustments
* Added more TF items (can't really get them anywhere yet)
 - Caprinium: Goat
 - Cerventine: Deer
 - Honey brew: Bee
 - Androgyn: Trappy TF
* Added some minor scenes for picking up ingredients.
* Most TF items and ingredients now have more than one source; several mobs has had new items added to their drop tables (low odds).
* Removed the tongue length variable (which really wasn't used anywhere, and there was no way to change it). Tongue length will be set by tongue race type from now on.
* Tongue type added to several TFs
* Added the final of the trio of Terry "Have a Drink" scenes. Requires that Terry has a pussy. Written by QB & LD.
* Added a new character, Vaughn, to the Outlaws. Written by The Observer.
 - You must have completed "Outlaws path into Rigard" and Krawitz to unlock him
 - He has some talk options
 - If you have big tits, you can give him a titfuck
 - He can send you on tasks. Currently only two available
* Added a fallback font for systems where the regular button font isn't available (thanks coladict on github!)
* Added a new way of doing save to file that should work for offline play! Tested and works for Chrome and Firefox, I make no promises for IE (thanks coladict on github!)

Version 0.4h