@@ -244,6 +244,7 @@
 		<script type="text/javascript" src="js/event/raven.js"></script>
 		
 		<script type="text/javascript" src="js/event/roaming.js"></script>
+		<script type="text/javascript" src="js/event/portalopening.js"></script>
 		<script type="text/javascript" src="js/event/citywatch.js"></script>
 		
 		<!-- Enemies -->
